--- a/app/assets/stylesheets/api/restaurants.scss
+++ b/app/assets/stylesheets/api/restaurants.scss
@@ -160,7 +160,8 @@
   width: 500px;
   height: 48px;
   display:flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   border-radius: 4px;
   border: solid lightgray 1px;
   margin-right: 15px;
@@ -213,6 +214,37 @@
 
 }
 
+.modal-search-div{
+  display: flex;
+  background-color:white;
+  border-right: solid lightgray 1px;
+  align-items: center;
+  position: relative;
+  padding-right:10px;
+
+}
+.modal-search-div select{
+  padding-right: 10px;
+    background-color:white;
+  height: 40px;
+  width:127px;
+  border:none;
+  font-size: 15px;
+  font-family: 'Amiko', sans-serif;
+ padding-right:10px;
+  margin-top: 3px;
+
+
+ 
+}
+.modal-search-div i{
+right: 0px;
+position: absolute;
+  background-color:white;
+  padding-right: 13px;
+
+}
+
 .modal-search-input{
   background-color:white;
   height: 40px;
@@ -220,11 +252,12 @@
   border-right: solid lightgray 1px;
   font-size: 15px;
   font-family: 'Amiko', sans-serif;
-  padding-right: 15px;
-  padding-left: 5px;
+ padding-right:10px;
   margin-top: 3px;
   
 }
+
+
 .modal-search-select{
   background-color:white;
   height: 40px;
@@ -233,8 +266,6 @@
   padding-left: 5px;
   padding-right: 13px;
   font-family: 'Amiko', sans-serif;
-  padding-top: 5px;
-  margin-top: 3px;
 }
 
 .modal-flex{
@@ -345,8 +376,14 @@ outline: none;
   top: 0;
   background-color: white;
 }
-.rest-olinks p{
+.rest-olinks a{
   padding-right: 20px;
+  text-decoration: none;
+  color: black;
+}
+.rest-olinks a:hover{
+  color: #B22222;
+  border-bottom: solid #B22222, 2px;
 }
 
 .rest-name{
@@ -397,6 +434,7 @@ z-index: -1;
   margin-top: 30px;
   align-items: center;
   margin-bottom: 30px;
+  line-height: 1.4;
 
 }
 
@@ -654,6 +692,23 @@ padding-left: 10px;
   
 
 }
+.wid-lbl input:hover{
+  outline: none;
+  border-bottom: solid #B22222 2px;
+  
+
+}
+.wid-lbl select:hover{
+  outline: none;
+  border-bottom: solid #B22222 2px;
+}
+
+.wid-lbl input:focus{
+  outline: none;
+}
+.wid-lbl select:focus{
+  outline: none;
+}
 
 .wid-sel{
   display: flex;
@@ -735,4 +790,8 @@ padding-top: 4px;
 .rs-nei-icn i{
  height: 25px;
  width: 25px;
+}
+
+.icn-strs3{
+  padding-top: 4px;
 }
