--- a/app/assets/stylesheets/api/footer.scss
+++ b/app/assets/stylesheets/api/footer.scss
@@ -1,6 +1,7 @@
 .footer-cont{
     background-color: #333;
-    width: 79%;
+ 
+    width: 80%;
     height: 200px;
     margin-top: 100px;
     display:flex;
@@ -15,11 +16,12 @@
   
 
 .footer-header{
-    margin-top: 20px;
+    margin-top: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 }
 
@@ -27,17 +29,51 @@
     padding-top: 20px;
     font-size: 25px;
     color:#C0C0C0;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .footer-header h3{
     font-size: 20px;
     color:#C0C0C0;
+    text-align: center;
+
     
 }
 
-.footer-header h3{
-    font-size: 20px;
-    color:#C0C0C0;
-    
+
+.fc{
+  color:#C0C0C0;
+   font-size: 42px; 
+
 }
+.fc:hover{
+  color:white;
+  cursor: pointer;
+   transform: transition(0.3s)
+}
+
+.fi{
+    color:#333;
+    font-size: 25px;
+    position: absolute; 
+    z-index: 2;
+}
+.fi:hover{
+
+  cursor: pointer;
+}
+
+.ftr-links{
+    display: flex;
+    justify-content: center;
+    margin-top: 7px;
+}
+.ftr-links a{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    align-items: center;
+    margin: 5px;
+}
+
