--- a/app/assets/stylesheets/api/footer.scss
+++ b/app/assets/stylesheets/api/footer.scss
@@ -1,49 +1,78 @@
+.app-div{
+    position: relative;
+    min-height: 100vh;
+}
+
+.show-tl{
+    margin-bottom: 450px;
+}
+
 .footer-cont{
     background-color: #333;
- 
-    width: 80%;
-    height: 200px;
+    bottom:0;
+    width: 100%;
+    height: 100px;
     margin-top: 100px;
     display:flex;
     justify-content: center;
-    padding: 0px 145px;
-
 }
-.inner.footer{
+.inner-footer{
      display: flex;
-    flex-direction: column;
-    justify-content: center;
-  
-
-.footer-header{
-    margin-top: 15px;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-}
+    
 }
 
+.footer-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    border-bottom: solid #C0C0C0 1px;
+ 
+}
+
+
 .footer-header h2{
-    padding-top: 20px;
-    font-size: 25px;
-    color:#C0C0C0;
-    margin-bottom: 10px;
+    font-size: 16px;
+    color:hsl(0, 0%, 75%);
+
+    text-align: center;
+    line-height: 1.6;
+
+}
+
+
+.ftr-h-l{
+    border-right: solid  #C0C0C0 1px;
+    padding-right: 15px;
+    margin-right: 15px;
+    height: 51px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-header h3{
-    font-size: 20px;
+    font-size: 16px;
     color:#C0C0C0;
     text-align: center;
 
     
 }
+.bull{
+    color:#C0C0C0;
+margin-left: 20px;
+margin-right: 20px;
+font-size:35px;
 
+}
 
 .fc{
   color:#C0C0C0;
-   font-size: 42px; 
+   font-size: 25px; 
 
 }
 .fc:hover{
@@ -54,7 +83,7 @@
 
 .fi{
     color:#333;
-    font-size: 25px;
+    font-size: 16px;
     position: absolute; 
     z-index: 2;
 }
@@ -66,7 +95,7 @@
 .ftr-links{
     display: flex;
     justify-content: center;
-    margin-top: 7px;
+  
 }
 .ftr-links a{
     position: relative;
@@ -75,5 +104,16 @@
     text-decoration: none;
     align-items: center;
     margin: 5px;
+}
+.fine-print{
+    padding-top: 7px;
+    font-size: 11px;
+    color:#C0C0C0;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
+.fine-print p{
+ margin-bottom: 3px;
 }
 
