--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -157,9 +157,98 @@ color: #247F9E
 
 .user-links a:hover{
 border-bottom: solid black 1px;
-color: black
+color: black;
 }
 
-.active-user-link{
+// .active-user-link{
 
+// }
+
+.show-cntnt{
+  display: flex;
+  background-color: rgb(244, 246, 248);
+  width: 100%;
+  height: 100%;
+}
+.inner-shw-cntnt{
+  display: flex;
+  margin: 25px 150px;
+  width: 100%;
+  height: 100%;
+}
+.show-u-links{
+  background-color: rgb(244, 246, 248);
+  margin-top:25px;
+  padding-left: 15px;
+  padding-right: 35px;
+}
+
+.show-u-links a {
+  text-decoration: none;
+}
+.show-u-links p {
+  color: gray;
+  font-size: 14px;
+  margin-bottom: 25px;
+  text-decoration: none;
+ 
+  
+}
+.show-u-tbs div{
+  margin-bottom:15px;
+ 
+ 
+}
+.show-u-tbs {
+  width: 100%;
+  
+}
+.show-u-tbs h1{
+  font-size:23px;
+  font-weight: bold;
+  padding-left: 20px;
+
+}
+
+
+.us-ur{
+background-color: white;
+}
+
+.us-sr{
+background-color: white;
+}
+
+.us-up{
+background-color: white;
+}
+.sep{
+  height:75px;
+  border-bottom: solid lightgray 1px;
+  display: flex;
+  align-items: center;
+}
+.btm{
+  background-color:white;
+  min-height: 75px;
+  display:flex;
+  align-items: center;
+}
+.btm p{
+  font-size: 14px;
+  padding-left: 20px;
+  margin-top: -15px;
+}
+.reservation-it{
+  margin-bottom: 10px;
+  
+}
+.iter{
+  font-size: 14px;
+flex-direction:column;
+background-color:white;
+  min-height: 75px;
+  display:flex;
+  justify-content: center;
+  padding-left: 20px;
 }
