css updates and reservation widget auth

--- a/app/assets/stylesheets/api/footer.scss
+++ b/app/assets/stylesheets/api/footer.scss
@@ -97,6 +97,9 @@ font-size:35px;
     justify-content: center;
   
 }
+.ftr-link:hover i:first-of-type{
+    color: white;
+}
 .ftr-links a{
     position: relative;
     display: flex;
