--- a/app/assets/stylesheets/api/reservations.scss
+++ b/app/assets/stylesheets/api/reservations.scss
@@ -99,13 +99,13 @@ padding-bottom: 20px;
 }
 
 .det-si{
-color: red;
+color: #B22222;
 font-weight: bold;
 cursor: pointer;
 }
 
 .det-si2{
-color: red;
+color: #B22222;
 font-weight: bold;
 
 }
