--- a/app/assets/stylesheets/api/restaurants.scss
+++ b/app/assets/stylesheets/api/restaurants.scss
@@ -115,7 +115,6 @@
 
 .rsearch{
     padding-right:30px;
-    padding-top: 8px;
     border-left: none;
     cursor: pointer;
 }
@@ -808,4 +807,5 @@ padding-top: 4px;
 
 .icn-strs3{
   padding-top: 4px;
+  width:90px;
 }
