--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -20,6 +20,7 @@
 
 .user-link-list{
   display: flex;
+  align-items: center;
 }
 
 .uu-dropdown{
@@ -32,6 +33,18 @@
   right: 10px;
   border-radius: 4px;
   margin: 5px;
+}
+.pointer3{
+  position: absolute;
+  background-color: white;
+  border-top: solid lightgray 1px;
+  border-left: solid lightgray 1px;
+  height: 14px;
+  width: 14px;
+  margin-left: 16px;
+  margin-top:-8px;
+
+  transform: rotate(45deg);
 }
 
 .uu-dropdown h2{
@@ -85,11 +98,23 @@
   position: absolute;
   background-color: white;
   border: solid lightgray 1px;
-  z-index: 3;
+  z-index: 4;
   width: 200px;
   right: 20px;
   border-radius: 4px;
   margin-top: 25px;
+}
+
+.pointer2{
+  position: absolute;
+  background-color: white;
+  border-top: solid lightgray 1px;
+  border-left: solid lightgray 1px;
+  height: 14px;
+  width: 14px;
+  margin-top:-8px;
+margin-left: 166px;
+  transform: rotate(45deg);
 }
 
 #greeting-header-div{
@@ -108,6 +133,7 @@
   padding-right: 18px;
   padding-left: 15px;
   width: 120px;
+  height: 25px;
   border-left: solid lightgray 1px;
   cursor: pointer;
 }
@@ -118,15 +144,21 @@
 }
 
 .greeting-angle{
-  color:gray;
-  font-size: 14px;
+  background-color: white;
+  border-top: solid gray 1.5px;
+  border-right: solid gray 1.5px;
+  height: 6px;
+  width: 6px;
+  transform: rotate(135deg);
+  margin-top: -5px;
+
 }
 
 .user-header{
   border-bottom: solid lightgray 1px;
 }
 .user-header *{
-  padding-left: 15px;
+  padding-left: 150px;
 }
 .user-header h2{
   font-size: 37px;
@@ -143,7 +175,7 @@
   padding-bottom: 15px;
   padding-top: 5px;
   font-weight: bold;
-  padding-left: 20px;
+  padding-left: 154px;
 }
 .user-links{
 background-color: white;
