--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,16 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Amiko&display=swap" rel="stylesheet">
-
+<meta property="og:title" content="FullPlate"/>
+<meta property="og:image" content="<%= image_url "logo.png" %>"/>
+<meta property="og:description" content="An Open Table Clone that allows users to manage restaurant reservations built using a Rails Backend and a React/Redux frontend"/>
 <script type="text/javascript">
   window.logo = '<%= image_url "logo.png" %>'
   window.search_icon = '<%= image_url "search.png" %>'
   window.splash = '<%= image_url "food_wine.jpg" %>'
   window.bell = '<%= image_url "bell_edit.jpg" %>'
+  window.rescal = '<%= image_url "res-cal.png" %>'
+  window.resppl = '<%= image_url "res-ppl.png" %>'
 </script>
   </head>
 
