--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Amiko&display=swap" rel="stylesheet">
 <meta property="og:title" content="FullPlate"/>
-<meta property="og:image" content="<%= image_url "logo.png" %>"/>
+<meta property="og:image" content="<%= image_url "pagepic.png" %>"/>
 <meta property="og:description" content="An Open Table Clone that allows users to manage restaurant reservations built using a Rails Backend and a React/Redux frontend"/>
 <script type="text/javascript">
   window.logo = '<%= image_url "logo.png" %>'
