--- a/app/assets/stylesheets/api/reservations.scss
+++ b/app/assets/stylesheets/api/reservations.scss
@@ -7,6 +7,7 @@ background-color: white;
 display: flex;
 height: 100%;
 justify-content: center;
+padding-bottom: 100px;
 }
 
 .reserve-div-l{
@@ -238,6 +239,8 @@ margin-bottom: 10px;;
   display: flex;
   height: 100%;
   padding: 25px 10vw;
+  padding-bottom: 100px;
+  
 }
 .up-res-r{
   width: 50vw;
