--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -201,6 +201,7 @@ color: black;
   background-color: rgb(244, 246, 248);
   width: 100%;
   height: 100%;
+  padding-bottom: 100px;
 }
 .inner-shw-cntnt{
   display: flex;
