--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
   window.bell = '<%= image_url "bell_edit.jpg" %>'
   window.rescal = '<%= image_url "res-cal.png" %>'
   window.resppl = '<%= image_url "res-ppl.png" %>'
+  window.redpad = '<%= image_url "redpad.png" %>'
+  window.loc = '<%= image_url "location.png" %>'
 </script>
   </head>
 
