--- a/app/assets/stylesheets/api/search_page.scss
+++ b/app/assets/stylesheets/api/search_page.scss
@@ -116,6 +116,10 @@ display:flex;
     height: 40px;
     width: 125px;
 }
+.sp-form-btn:hover{
+  background-color:  #8d1b1b;
+  transition: 0.4s;
+}
 
 .sp-ctnt{
   background-color:white;
