--- a/app/assets/stylesheets/api/landing.scss
+++ b/app/assets/stylesheets/api/landing.scss
@@ -79,6 +79,7 @@ margin-right:15px;
   padding-right: 15px;
   padding-left: 5px;
   margin-top: 3px;
+  cursor:pointer;
   
 }
 .splash-search-select{
@@ -91,6 +92,7 @@ margin-right:15px;
   font-family: 'Amiko', sans-serif;
   padding-top: 5px;
   margin-top: 3px;
+  cursor:pointer;
 }
 
 #splash-search-form{
@@ -109,6 +111,7 @@ margin-right:15px;
   border-right: solid lightgray 1px;
   position: relative;
   padding-right:10px;
+  cursor: pointer;
 
 
 }
@@ -119,6 +122,7 @@ margin-right:15px;
   width: 125px;
   -webkit-appearance: none;
   -moz-appearance: none;
+  cursor: pointer;
 
 }
 .splash-time-in i{
@@ -126,7 +130,7 @@ margin-right:15px;
   background-color:white;
   right: 0;
   padding-right: 15px;
-
+  cursor: pointer;
 }
 
 #splash-search-div{
