--- a/app/assets/stylesheets/api/reservations.scss
+++ b/app/assets/stylesheets/api/reservations.scss
@@ -848,8 +848,95 @@ margin-right: 5px;
 .cancel-head{
     height: 120px;
     border-bottom: solid lightgray 1px;
+    font-size: 34px;
+    padding-left: 17vw;
+    display: flex;
+    align-items: center;
+    font-weight: bold;
 }
 .cancel-body{
     background-color:#f4f6f8;
     height: 70vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+
+}
+
+.c-body-div{
+    width: 66vw;
+    min-width: 66vw;
+
+}
+.c-div-top{
+    box-sizing: border-box;
+    margin-top: 30px;
+    background-color: white;
+    height: 115px;
+    border-bottom: solid lightgray 1px;
+    border-radius: 5px 5px 0 0;
+    display: flex;
+
+    padding: 25px;
+}
+.c-div-top img{
+    height: 60px;
+    width: 60px;
+    border-radius: 3px;
+}
+
+.c-div-inf{
+    display:flex;
+    margin-top: 5px;
+}
+.c-div-inf > div{
+    display:flex;
+    flex-direction: column;
+    font-weight: bold;
+    padding: 0 0 0 35px;
+}
+.c-div-inf > div > span:first-of-type{
+    letter-spacing: -0.05em;
+    font-size: 14px;
+    margin-bottom: 8px;
+}
+.c-div-inf > div > span{
+    font-size: 18px;
+}
+
+.c-div-inf a{
+    text-decoration: none;
+    color: #247F9E;
+     font-size: 18px;
+     cursor: pointer;
+     font-weight: bold;
+}
+
+.c-div-inf a:hover{
+    color: #19596f;
+}
+
+.c-div-btm{
+    display: flex;
+    align-items: center;
+   background-color: white;
+    height: 85px;
+    border-radius: 0 0 5px 5px ;
+    box-shadow: 0px 1px 1px lightgray;
+}
+
+.c-div-btm button{
+   background-color: #B22222;
+   color: white;
+   width: 190px;
+   height: 52px;
+   border: none;
+   outline: none;
+   cursor: pointer;
+   margin-left: 15px;
+}
+
+.c-div-btm button:hover{
+    background-color:  #8d1b1b;
+    transition: 0.4s;
 }
