--- a/app/assets/stylesheets/api/restaurants.scss
+++ b/app/assets/stylesheets/api/restaurants.scss
@@ -30,7 +30,7 @@
 .restaurant-icon:hover{
   transform: translateY(-5px);
   transition: 0.3s;
-  box-shadow: 0 2px 6px  
+  box-shadow: 0 2px 6px;  
 }
 
 .restaurant-icon img{
