--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
   window.resppl = '<%= image_url "res-ppl.png" %>'
   window.redpad = '<%= image_url "redpad.png" %>'
   window.loc = '<%= image_url "location.png" %>'
+  window.resticon = '<%= image_url "resticon.png" %>'
 </script>
   </head>
 
