aws image replacement

--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -296,8 +296,12 @@ background-color:white;
 
   -webkit-border-radius: 5px 5px 5px 5px;
 border-radius: 5px 5px 5px 5px; 
-  margin-top: 20px;
+  margin-top: 10px;
 
+}
+
+.iter p{
+  padding-left: 20px;
 }
 
 .btm{
