--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
   window.redpad = '<%= image_url "redpad.png" %>'
   window.loc = '<%= image_url "location.png" %>'
   window.resticon = '<%= image_url "resticon.png" %>'
+  window.salmonplate = '<%= image_url "salmon_plate.jpg" %>'
 </script>
   </head>
 
