--- a/app/assets/stylesheets/api/reservations.scss
+++ b/app/assets/stylesheets/api/reservations.scss
@@ -183,6 +183,7 @@ height: 44px;
     cursor:pointer;
     margin-top: 20px;
     margin-bottom: 17px;
+    outline:none;
 
 }
 .comp-btn:hover {
@@ -1132,7 +1133,7 @@ background-color:  #8d1b1b;
 }
 
 .up-next-hold{
-    padding: 40px 205px;
+    padding: 45px 205px;
     font-size: 15px;
 }
 
@@ -1146,6 +1147,19 @@ display: flex;
 height: 100%;
 padding-bottom: 50px;
 }
+.mod-div-l{
+
+   width: 630px;
+   min-width: 630px;
+   margin-right: 20px;
+}
+
+.mdiv-a img{
+    height: 65px;
+    width: 65px;
+    object-fit: cover;
+    border-radius: 4px;
+}
 
 .c-dd-input{
     display:flex;
@@ -1156,15 +1170,68 @@ padding-bottom: 50px;
 }
 
 .c-dd-input input{
-    width: 260px;
+    width: 290px;
     font-family: 'Amiko', sans-serif;
-    height: 42px;
+    height: 44px;
     border: solid lightgray 1px;
     border-radius: 3px;
     padding-left: 10px;
+    color: black
+
+}
+.c-dd-input input:last-of-type{
+     color: gray
+
+}
+
+.c-dd-input input::placeholder{
     color: gray
 
 }
 .c-dd-input input:first-of-type:hover{
     border: solid black 1px;
+}
+
+.c-dd-select{
+    display:flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
+.c-dd-select input{
+    width: 290px;
+    font-family: 'Amiko', sans-serif;
+    height: 44px;
+    border: solid lightgray 1px;
+    border-radius: 3px;
+    padding-left: 10px;
+    color: black;
+}
+
+.c-dd-select input::placeholder{
+    color: gray
+}
+.c-dd-select select{
+    width: 289px;
+    font-family: 'Amiko', sans-serif;
+    height: 46px;
+    border: none;
+    padding-left: 10px;
+    color: black
+}
+
+.c-dd-select input:hover{
+    border: solid black 1px;
+
+}
+.c-dd-select div:hover{
+    border: solid black 1px;
+
+}
+.c-dd-sel-cont{
+width: 302px;
+ border: solid lightgray 1px;
+   border-radius: 3px;
+height: 46px;
 }
