favorite creation deletion working on restaurant show

--- a/app/assets/stylesheets/api/restaurants.scss
+++ b/app/assets/stylesheets/api/restaurants.scss
@@ -322,6 +322,10 @@ width: 220px;
 height:45px;
 top: 30px;
 font-size: 12px;
+display: flex;
+align-items: center;
+justify-content: center;
+border-radius: 2px;
 }
 
 .res-fav-btn i{
