--- a/app/assets/stylesheets/api/reviews.scss
+++ b/app/assets/stylesheets/api/reviews.scss
@@ -21,8 +21,8 @@
     font-weight: bold;
     text-align: center;
     line-height: 1.6;
-    font-size: 20px;
-    margin-top: 40px;
+    font-size: 22px;
+    margin-top: 30px;
     margin-bottom: 15px;
 }
 
@@ -47,10 +47,88 @@
 
 .rate-exp{
     margin-bottom: 10px;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: none;
 }
 
 .rate-sel-div{
+    display: flex;
+    box-sizing: border-box;
     margin-top: 50px;
+    width: 65%;
+    height: 300px;
 }
+
+.rate-type{
+    box-sizing: border-box;
+    height: 250px;
+    width: 115px;
+}
+
+.rate-str{
+    box-sizing: border-box;
+    height: 250px;
+    width: 180px;
+}
+
+.rate-type span{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
+    height: 50px;
+    font-size: 15px;
+    padding-top: 3px;
+    font-weight: bold;
+}
+
+.rate-pick{
+    height:50px;
+    display: flex;
+    align-items: center;
+}
+
+.fill-stars{
+    color: #B22222;
+    margin-left: 5px;
+}
+
+.un-stars{
+    color:rgb(228, 224, 224);
+    margin-left: 5px;
+}
+
+.rate-desc{
+    box-sizing: border-box;
+    height: 250px;
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+}
+
+.rate-val{
+    height:50px;
+    display: flex;
+    align-items: center;
+    font-size: 13px;
+    padding-left: 20px;
+    
+}
+
+#next-btn-1{
+    background-color: #b15f5f;
+    color: white;
+    font-size: 12.5px;
+    border: none;
+    outline: none;
+    height: 50px;
+    width: 220px;
+    margin-top: 35px;
+    cursor: no-drop;
+}
+
+.next-btn-1-hov:hover{
+    background-color:  #8d1b1b;
+    transition: 0.4s;
+}
+
