--- a/app/assets/stylesheets/api/reviews.scss
+++ b/app/assets/stylesheets/api/reviews.scss
@@ -132,3 +132,125 @@
     transition: 0.4s;
 }
 
+.wr-review{
+    box-sizing: border-box;
+    margin-top: 50px;
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 630px;
+
+}
+
+.wr-review i {
+ padding: 0 5px;
+ font-size: 18px;
+}
+
+.wr-review span{
+    font-size: 13px;
+    display:flex;
+    align-items: center;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+}
+
+.wr-review textarea{
+    box-sizing: border-box;
+    width:100%;
+    height: 200px;
+    border: solid lightgray 1px;
+    border-radius: 10px;
+    margin: 10px 0;
+    font-family: 'Amiko', sans-serif;
+    font-size: 15px;
+    padding: 15px 8px;
+    font-weight: 100;
+    outline: none;
+
+}
+
+.wr-review textarea:focus{
+    border: solid rgb(0, 36, 53) 1px;
+}
+
+.wr-review textarea::placeholder{
+    font-family: 'Amiko', sans-serif;
+    font-size: 15px;
+    // padding: 15px 8px;
+    font-weight: 100;
+}
+
+.wr-review > div {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 4px;
+   
+    font-weight: 100;
+}
+
+.wr-review > div > span {
+    color: gray;
+}
+
+.wr-review > div > span > p {
+    color:  #8d1b1b;
+}
+
+.rec-bool{
+    width: 630px;
+    justify-content: flex-start;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 35px;
+}
+
+.rec-bool > span{
+     display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+.rec-bool > span > span{
+    margin-right: 15px;
+     display: flex;
+    align-items: center;
+
+}
+
+.rec-bool > span > span > i{
+    font-size: 18px;
+    padding-right: 5px;
+    cursor: pointer;
+
+}
+
+.rec-bool > span > span > span{
+    margin-top: 5px;
+}
+
+.fa-dot-circle{
+    color:#B22222;
+}
+
+.rev-pg button{
+    height:50px;
+    width: 200px;
+    margin-bottom: 70px;
+}
+.rev-pg button:first-of-type{
+    margin-right: 15px;
+    background-color: white;
+    border: solid lightgray 1px;
+    outline: none;
+}
+.rev-pg button:last-of-type{
+    background-color: #b15f5f;
+    color: white;
+    border: none;
+    outline: none;
+}
