--- a/app/assets/stylesheets/api/reviews.scss
+++ b/app/assets/stylesheets/api/reviews.scss
@@ -157,6 +157,10 @@
     text-decoration: none;
 }
 
+.wr-review span:first-of-type{
+    cursor: pointer;
+}
+
 .wr-review textarea{
     box-sizing: border-box;
     width:100%;
@@ -169,11 +173,12 @@
     padding: 15px 8px;
     font-weight: 100;
     outline: none;
+     resize:none;
 
 }
 
 .wr-review textarea:focus{
-    border: solid rgb(0, 36, 53) 1px;
+    border: solid rgb(40, 128, 150) 1px;
 }
 
 .wr-review textarea::placeholder{
@@ -233,13 +238,13 @@
     margin-top: 5px;
 }
 
-.fa-dot-circle{
+.fa-dot-circle2{
     color:#B22222;
 }
 
 .rev-pg button{
     height:50px;
-    width: 200px;
+    width: 220px;
     margin-bottom: 70px;
 }
 .rev-pg button:first-of-type{
@@ -247,10 +252,249 @@
     background-color: white;
     border: solid lightgray 1px;
     outline: none;
+    cursor: pointer;
+    font-size: 12.5px;
+    
 }
+
+.rev-pg button:first-of-type:hover{
+background-color: lightgray;
+ transition: 0.4s;
+}
+
 .rev-pg button:last-of-type{
     background-color: #b15f5f;
     color: white;
     border: none;
     outline: none;
+    cursor: no-drop;
+    font-size: 12.5px;
+    
+}
+.review-main-div2{
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    width: 648px;
+    min-width: 648px;
+
+}
+
+.rev-nn input{
+    box-sizing: border-box;
+    width: 100%;
+    height: 25px;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    font-family: 'Amiko', sans-serif;
+    font-size: 15px;
+    outline: none;
+}
+
+.rev-nn {
+    box-sizing: border-box;
+    width: 100%;
+    height: 60px;
+    margin: 120px 0 5px 0;
+    border: solid #8d1b1b 1px;
+    border-radius: 3px;
+    padding: 7px;
+}
+.nn-l{
+    color: rgb(49, 49, 49);
+    font-size: 13px;
+}
+.nn-char-c{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    font-size: 13px;
+    margin-bottom: 50px;
+
+}
+.nn-char-c p{
+    font-size: 13px;
+  color:  #8d1b1b;
+}
+.nn-char-c p:last-of-type{
+    color: gray;
+}
+
+.pm-rest{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    font-size: 14px;
+}
+
+.pm-resp{
+    display: flex;
+    justify-content: space-between;
+    width:100%;
+    // margin:15px 0 0px 0;
+ 
+    margin:15px 0 130px 0;
+ 
+}
+
+.pm-resp span{
+    font-size: 13px;
+    cursor: default;
+}
+
+.pm-resp span > i{
+    font-size: 18px;
+}
+
+.pm-bool i{
+    font-size: 18px;
+}
+.pm-bool{
+    display: flex;
+    align-items: center;
+}
+
+.pm-bool span{
+    display: flex;
+    align-items: center;
+    margin-right: 12px;
+}
+
+.pm-bool span > i{
+     margin-right: 7px;
+     cursor: pointer;
+}
+.pm-bool span > span{
+     margin-top: 3px;
+}
+
+.pm-body {
+    display: none;
+    width:100%;
+    margin: 40px 0 50px 0;
+}
+
+.pm-body textarea{
+box-sizing: border-box;
+    width:100%;
+    height: 200px;
+    border: solid lightgray 1px;
+    border-radius: 10px;
+    font-family: 'Amiko', sans-serif;
+    font-size: 15px;
+    padding: 15px 8px;
+    font-weight: 100;
+    outline: none;
+     resize:none;
+}
+
+
+.pm-body textarea:focus{
+    border: solid rgb(40, 128, 150) 1px;
+}
+
+.pm-body textarea::placeholder{
+    font-family: 'Amiko', sans-serif;
+    font-size: 15px;
+    // padding: 15px 8px;
+    font-weight: 100;
+}
+
+.pm-leng{
+    margin-top: 4px;
+    display:flex;
+    justify-content: space-between;
+}
+
+.pm-leng span{
+    display:flex;
+    color: gray;
+    font-size: 13px;
+}
+.pm-leng span > p{
+    color:  #8d1b1b;
+}
+
+#rev-sub{
+    background-color: #B22222;
+    cursor: pointer;
+
+}
+
+#rev-sub:hover{
+    background-color:  #8d1b1b;
+    transition: 00.4s;
+    
+}
+
+.rev-help{
+    box-sizing: border-box;
+    background-color: white;
+    font-family: 'Amiko', sans-serif;
+    position: absolute;
+    border-radius: 5px;
+    height: 520px;
+    width: 630px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding:20px;
+}
+.rh-close{
+    cursor: pointer;
+    font-size: 19px;
+
+}
+
+.rh-body{
+    padding: 30px 0 30px 10px;
+}
+
+.rh-body h2{
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.rh-body > span{
+    font-size: 14.5px;
+    line-height: 1.3;
+    margin-bottom: 20px;
+    color: rgb(49, 49, 49);
+}
+.rh-body > ol{
+    list-style: disc;
+    margin: 25px 0 25px 20px;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 1.5;
+}
+.rh-body > div{
+    display: flex;
+    flex-direction: column;
+}
+.rh-body > div > span:first-of-type{
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 7px;
+    
+}
+.rh-body > div > span:last-of-type{
+    font-size: 14.5px;
+     font-weight: none;
+     line-height: 1.4;
+     color: rgb(49, 49, 49);
+
+}
+
+.pn-modal{
+     background-color: white;
+    font-family: 'Amiko', sans-serif;
+    position: absolute;
+    border-radius: 5px;
+    height: 650px;
+    width: 650px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
