--- a/app/assets/stylesheets/api/reviews.scss
+++ b/app/assets/stylesheets/api/reviews.scss
@@ -124,6 +124,7 @@
     height: 50px;
     width: 220px;
     margin-top: 35px;
+    margin-bottom: 55px;
     cursor: no-drop;
 }
 
@@ -463,18 +464,25 @@ box-sizing: border-box;
     color: rgb(49, 49, 49);
 }
 .rh-body > ol{
-    list-style: disc;
-    margin: 25px 0 25px 20px;
-    font-size: 15px;
+    list-style: none;
+    margin: 25px 0 25px 0px;
+    font-size: 14.5px;
     font-weight: bold;
     line-height: 1.5;
+}
+.rh-body li:before {
+    content:"·";
+    font-size:40px;
+    vertical-align:middle;
+    line-height:20px;
+    margin-right: 12px;
 }
 .rh-body > div{
     display: flex;
     flex-direction: column;
 }
 .rh-body > div > span:first-of-type{
-    font-size: 15px;
+    font-size: 14.5px;
     font-weight: bold;
     margin-bottom: 7px;
     
@@ -488,6 +496,7 @@ box-sizing: border-box;
 }
 
 .pn-modal{
+    box-sizing: border-box;
      background-color: white;
     font-family: 'Amiko', sans-serif;
     position: absolute;
@@ -497,4 +506,55 @@ box-sizing: border-box;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+     padding:20px;
+}
+
+.pn-body{
+    display: flex;
+    flex-direction: column;
+    padding: 30px 0 30px 10px;
+}
+
+.pn-body h2{
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.pn-body > span{
+    font-size: 14.5px;
+    line-height: 1.7;
+    font-weight: none;
+    margin-bottom: 20px;
+    color: rgb(49, 49, 49);
+
+}
+
+.pn-body > div{
+    display: flex;
+    flex-direction: column;
+    border-bottom: solid gray 1px;
+}
+.pn-body > div > span:first-of-type{
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 1px;
+    line-height: 1.3;
+    color: black;
+}
+
+.pn-body > div > span{
+    font-size: 14.5px;
+    line-height: 1.7;
+    font-weight: none;
+    margin-bottom: 20px;
+    color: rgb(49, 49, 49);
+}
+.pn-body > span:last-of-type{
+     font-weight: bold;
+    margin-top: 10px;
+    font-size: 12.5px;
+}
+
+.pn-body > span:last-of-type > span{
+    color: #B22222
 }
