--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@ crossorigin="anonymous"/>
   window.loc = '<%= image_url "location.png" %>'
   window.resticon = '<%= image_url "resticon.png" %>'
   window.salmonplate = '<%= image_url "salmon_plate.jpg" %>'
+  window.raterev = '<%= image_url "rate_rev.png" %>'
 </script>
   </head>
 
