added reservation id column to reviews

--- a/app/assets/stylesheets/api/restaurants.scss
+++ b/app/assets/stylesheets/api/restaurants.scss
@@ -520,11 +520,16 @@ z-index: -1;
   margin-bottom: 20px;
   font-weight: bold;
 }
-.res-menu p{
+
+.res-menu span{
 font-size: 14px;
 padding-top: 10px;
 padding-bottom: 10px;
 font-weight: bold;
+}
+#rms{
+  margin:40px 0 25px 0;
+
 }
 
 .res-revs{
