--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -158,7 +158,7 @@ margin-left: 166px;
   border-bottom: solid lightgray 1px;
 }
 .user-header *{
-  padding-left: 150px;
+  padding-left: 240px;
 }
 .user-header h2{
   font-size: 37px;
@@ -175,7 +175,7 @@ margin-left: 166px;
   padding-bottom: 15px;
   padding-top: 5px;
   font-weight: bold;
-  padding-left: 154px;
+  padding-left: 244px;
 }
 .user-links{
 background-color: white;
@@ -205,7 +205,7 @@ color: black;
 }
 .inner-shw-cntnt{
   display: flex;
-  margin: 25px 150px;
+  margin: 25px 240px;
   width: 100%;
   height: 100%;
 }
@@ -235,7 +235,7 @@ color: black;
 
 
 .show-u-tbs {
-  width: 850px;
+  width: 100%;
   min-width: 600px;
   
 }
@@ -278,6 +278,7 @@ box-shadow: 0px 2px 2px lightgray;
   border-bottom: solid lightgray 1px;
   padding-bottom: 30px;
   padding-left: 20px;
+  padding-right: 20px;
   margin-top: 5px;
   
 }
@@ -322,6 +323,7 @@ border-radius: 13px 13px 13px 13px;
 .u-res-info-div{
     font-size: 13px;
     margin-top: 12px;
+    width: 100%
 }
 
 .u-res-info-div span{
@@ -481,5 +483,53 @@ margin-bottom: 10px;
  background-color:  #8d1b1b;
     transition: 0.4s;
   }
+
+  .us-revdet{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border: solid lightgray 1px;
+    border-radius: 5px;
+    padding: 25px 15px;
+  }
+
+  .us-revdet h4{
+    color:gray;
+    font-size: 14.5px;
+    margin-bottom: 20px;
+    
+  }
+
+.us-revdet > span:first-of-type{
+  color: black;
+  font-size: 14.5px;
+  line-height: 1.6;
+  margin-bottom: 12px;
+}
+
+
+.past-stars > span{
+  padding-top: 5px;
+  // font-size: 25px;
+}
+.past-stars > span::before{
+  padding-top: 5px;
+ 
+}
+
+.rtngs-sec{
+  display:flex;
+}
+.rtngs-sec > span{
+
+  margin-right: 70px;
+}
+
+.rtngs-sin > span{
+  font-size: 15px;
+  color: gray;
+}
+
 
 
