--- a/app/assets/stylesheets/api/restaurants.scss
+++ b/app/assets/stylesheets/api/restaurants.scss
@@ -343,7 +343,8 @@ outline: none;
 
   display: flex;
   width: 100%;
-  height: 800px;
+  height: 100%;
+  // height: 800px;
   justify-content: center;
 }
 
@@ -536,7 +537,7 @@ font-weight: bold;
   margin: 0 10px;
   font-size: 22px;
   margin-bottom: 15px;
-  padding-bottom: 30px;
+  padding-bottom: 60px;
   border-bottom: solid lightgray 1px;;
 
 }
@@ -552,7 +553,13 @@ font-size: 14px;
 font-weight: bold;
 
 }
-
+.revs-only{
+  font-size: 14px;
+  width: 350px;
+  margin-top: 10px;
+  line-height: 1.4;
+  color: rgb(49, 49, 49);
+}
 .res-rating{
   display:flex;
   margin-top:15px;
@@ -580,6 +587,7 @@ padding-right:10px;
 }
 .rate-div p{
 font-size: 13px;
+color: rgb(49, 49, 49);
 
 }
 .rate-div-f p{
@@ -612,13 +620,14 @@ margin-left: 10px;
 margin-top: 7px;
 font-size: 14px;
 
+
 }
 
 .res-nl{
   display: flex;
   align-items: center;
   margin-top: 25px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .nl-bars{
@@ -637,7 +646,7 @@ color:gray;
 
 .icn-strs2{
   display: flex;
-margin-top: 15px;
+margin-top: 10px;
   align-items: center;
   margin-bottom: 20px;
 }
@@ -653,8 +662,9 @@ font-size:15px;
 
 .icn-strs2 p{
 margin-left: 10px;
-margin-top: 7px;
+// margin-top: 7px;
 font-size: 13px;
+color: rgb(49, 49, 49);
 
 }
 
@@ -819,3 +829,4 @@ padding-top: 4px;
   padding-top: 4px;
   width:90px;
 }
+
