--- a/app/assets/stylesheets/api/landing.scss
+++ b/app/assets/stylesheets/api/landing.scss
@@ -66,7 +66,7 @@ z-index: 2;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
-
+min-width: 1140px;
 
 }
 .splash-f-cont div{
@@ -142,8 +142,6 @@ margin-right:15px;
 #splash-search-div{
   display:flex;
   align-items: center;
-
-  width: 560px;
 
 }
 
