--- a/app/assets/stylesheets/api/restaurants.scss
+++ b/app/assets/stylesheets/api/restaurants.scss
@@ -608,6 +608,15 @@ font-size: 16px;
   margin-bottom: 13px;
 }
 
+
+.r-icon-strs > span{
+  padding-top: 2px;
+}
+.r-icon-strs > span::before{
+  padding-top: 2px;
+
+}
+
 .ifpst{
   color:#B22222;
 }
@@ -826,7 +835,7 @@ padding-top: 4px;
 }
 
 .icn-strs3{
-  padding-top: 4px;
-  width:90px;
+  margin-top: -4px;
+  width:97px;
 }
 
