--- a/app/assets/stylesheets/api/reviews.scss
+++ b/app/assets/stylesheets/api/reviews.scss
@@ -651,10 +651,12 @@ box-sizing: border-box;
 }
 
 .review-l{
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0 15px;
+    width: 170px;
 }
 .rev-user{
     display: flex;
@@ -698,6 +700,10 @@ box-sizing: border-box;
 .rev-stars > span{
     padding-top: 2px;
     margin: 1px;
+    z-index: -1;
+}
+.rev-stars > span::before{
+    padding-top: 2px;
 }
 .din-o{
     display: flex;
